--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="carousel-inner" style="height: 500px; width: 100%;">
           <div class="carousel-item active">
-            <img src="assets/apresentação.jpeg" class="d-block w-100" alt="...">
+            <img src="assets/LouerTech.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="assets/apresentação2.jpg" class="d-block w-100" alt="...">
