--- a/index.html
+++ b/index.html
@@ -38,32 +38,29 @@
         </nav>
     </header>
 
-    <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner" style="height: 500px; width: 100%;">
-          <div class="carousel-item active">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner" style="height: 485px;">
+          <div class="carousel-item active" style="height: fit-content; width: 100%;">
             <img src="assets/LouerTech.png" class="d-block w-100" alt="...">
           </div>
-          <div class="carousel-item">
-            <img src="assets/apresentação2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-item" >
+            <img src="assets/orador-afro-americano-feminino-dando-apresentacao-no-salao-na-oficina-da-universidade.png" class="d-block w-100" alt="...">
+            <span style="position: absolute; z-index: 2;  top: 20%; left: 10%; width: 27%; color: #ffffff; font-size: 26px; text-align: justify;"><h1 style="font-size: 50px; font-weight: 600;">Texto</h1>Tenha equipamentos modernos e atualizados com nossas soluções em outsourcing de notebooks e computadores para suas apresentações. </span>
           </div>
           <div class="carousel-item">
-            <img src="assets/funcionarios.jpg" class="d-block w-100" alt="...">
+            <img src="assets/funcionarios.png" class="d-block w-100" alt="...">
+            <span style="position: absolute; z-index: 2;  top: 20%; left: 10%; width: 27%; color: #ffffff; font-size: 26px; text-align: justify;"><h1 style="font-size: 50px; font-weight: 600;">Texto</h1>Tenha equipamentos modernos e atualizados com nossas soluções em outsourcing de notebooks e computadores para suas apresentações. </span>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev" style="width: 5%;">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next" style="width: 5%;">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    </div>
         
     <section>
         <div class="container">
