--- a/home/home.html
+++ b/home/home.html
@@ -229,10 +229,10 @@ plataformas apresentadas. <br>
         </div>
         </footer>
         <section>
-        <div class="copyright" style="margin-top: 40px;">
-            <p>© 2023 LouerTech. Todos os direitos estão reservados. Desenvolvido por RenTech.</p>
-        </div>
-    </section>
+            <div class="copyright" >
+                <p>© 2023 LouerTech. Todos os direitos estão reservados. Desenvolvido por RenTech.</p>
+            </div>
+        </section>
 </body>
 <script>
     function Scrollativo() {
