--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LouerTech- Home</title>
-    <link rel="shortcut icon" href="../assets/LOGO-LouerTech-versaoprincipal.png" type="image/x-icon">
-    <link rel="stylesheet" href="home.css">
+    <link rel="shortcut icon" href="assets/LOGO-LouerTech-versaoprincipal.png" type="image/x-icon">
+    <link rel="stylesheet" href="home/home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -14,41 +14,41 @@
 <body>
     <header id="menu">
         <nav class="listamenu">
-            <img class="logo" src="../assets/LOGO-LouerTech.svg" alt="">
+            <img class="logo" src="assets/LOGO-LouerTech.svg" alt="">
             <ul class="lista_centro">
-                <a href="home.html">
+                <a href="home/home.html">
                     <li>Home</li>
                 </a>
-                <a href="../produtos/produtos.html">
+                <a href="produtos/produtos.html">
                     <li>Equipamentos</li>
                 </a>
-                <a href="../louerlab/louerlab.html">
+                <a href="louerlab/louerlab.html">
                     <li>LouerLab</li>
                 </a>
-                <a href="../orcamento/orcamento.html">
+                <a href="orcamento/orcamento.html">
                     <li>Orçamento</li>
                 </a>
             </ul>
             <ul class="lista_direita">
-                <a href="../login/login.html">
+                <a href="login/login.html">
                     <button>Faça seu login!</button>
-                    <img src="../assets/USER 2.svg" alt="">
+                    <img src="assets/USER 2.svg" alt="">
                 </a>
-                <li><img src="../assets/carrinho-de-compras.svg" alt=""></li>
+                <li><img src="assets/carrinho-de-compras.svg" alt=""></li>
             </ul>
         </nav>
     </header>
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-aos="fade-up">
         <div class="carousel-inner" style="height: 485px;">
           <div class="carousel-item active" style="height: fit-content; width: 100%;">
-            <img src="../assets/LouerTech.png" class="d-block w-100" alt="...">
+            <img src="assets/LouerTech.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" >
-            <img src="../assets/orador-afro-americano-feminino-dando-apresentacao-no-salao-na-oficina-da-universidade.png" class="d-block w-100" alt="...">
+            <img src="assets/orador-afro-americano-feminino-dando-apresentacao-no-salao-na-oficina-da-universidade.png" class="d-block w-100" alt="...">
             <span style="position: absolute; z-index: 1;  top: 20%; left: 10%; width: 27%; color: #ffffff; font-size: 26px; text-align: justify;"><h1 style="font-size: 50px; font-weight: 600;" >Outsoursing</h1>Tenha equipamentos modernos e atualizados com nossas soluções em outsourcing de notebooks e computadores para suas apresentações. </span>
           </div>
           <div class="carousel-item">
-            <img src="../assets/funcionarios.png" class="d-block w-100" alt="...">
+            <img src="assets/funcionarios.png" class="d-block w-100" alt="...">
             <span style="position: absolute; z-index: 1;  top: 20%; left: 10%; width: 27%; color: #ffffff; font-size: 26px; text-align: justify;"><h1 style="font-size: 50px; font-weight: 600;">Outsoursing</h1>Tenha equipamentos modernos e atualizados com nossas soluções em outsourcing de notebooks e computadores para suas apresentações. </span>
           </div>
         </div>
@@ -66,7 +66,7 @@
 
 <div id="fundo">
     <div class="textos" data-aos="fade-up">
-        <img src="../assets/LOGO-LouerTech-versaoprincipal.png" class="imagen_logo">
+        <img src="assets/LOGO-LouerTech-versaoprincipal.png" class="imagen_logo">
         <p>
     Outsoursing de aparelhos <br>
 celulares para fins administrativos <br>
@@ -79,7 +79,7 @@ estande e apresentações empresáriais. <br>
     </div>
 
     <div class="textos2" data-aos="fade-down">
-        <img src="../assets/LOGO-LouerTech-versaoprincipal.png" class="imagen_logo">
+        <img src="assets/LOGO-LouerTech-versaoprincipal.png" class="imagen_logo">
         <p>
         Outsoursing de computadores <br>
 para demonstração de sites, plataformas <br>
@@ -94,7 +94,7 @@ plataformas apresentadas.
     </div>
 
     <div class="textos3" data-aos="fade-up">
-        <img src="../assets/LOGO-LouerTech-versaoprincipal.png" class="imagen_logo">
+        <img src="assets/LOGO-LouerTech-versaoprincipal.png" class="imagen_logo">
         <p>
         Outsoursing de laptops
         <br>
@@ -120,7 +120,7 @@ plataformas apresentadas. <br>
     <H1>Segmentos</H1 data-aos="fade-up" >
     <br> 
     <div class="textos_1" data-aos="fade-up">
-        <img src="../assets/faculdade.png" class="imagen_icone">
+        <img src="assets/faculdade.png" class="imagen_icone">
         <p>
             <h4>Faculdades Publicas</h4> <br>
             Você aluno de faculdade pública, <br>
@@ -130,7 +130,7 @@ plataformas apresentadas. <br>
         </p>
     </div>
     <div class="textos_1" data-aos="fade-down">
-        <img src="../assets/apresent.png" class="imagen_icone1">
+        <img src="assets/apresent.png" class="imagen_icone1">
         <p>
             <h4>Profissionais </h4> <br>
             temos a melhor solução outsourcing, <br>
@@ -140,7 +140,7 @@ plataformas apresentadas. <br>
         </p>
     </div>
     <div class="textos_1" data-aos="fade-up">
-        <img src="../assets/companhia (1).png" class="imagen_icone2">
+        <img src="assets/companhia (1).png" class="imagen_icone2">
         <p>
             <h4>Instituições</h4><br>
             Temos solução para alunos e tutores <br>
@@ -175,7 +175,7 @@ plataformas apresentadas. <br>
     <footer style="height: 400px;">
         <div class="conteudo_footer">
             <div class="divs_footer">
-                <img src="../assets/LOGO-LouerTech-versaobranca.png" alt="">
+                <img src="assets/LOGO-LouerTech-versaobranca.png" alt="">
             </div>
             <div class="divs_footer">
                 <span>LOCAÇÃO DE EQUIPAMENTOS</span>
@@ -206,8 +206,8 @@ plataformas apresentadas. <br>
                     <li>louertech@gmail.com</li>
                     <br>
                     <li>
-                        <a href="https://www.instagram.com/louertech/" target="_blank"><img src="../assets/instagram.svg" alt=""></a>
-                        <a href="https://www.linkedin.com/home" target="_blank"><img src="../assets/linkedin.svg" alt=""></a>
+                        <a href="https://www.instagram.com/louertech/" target="_blank"><img src="assets/instagram.svg" alt=""></a>
+                        <a href="https://www.linkedin.com/home" target="_blank"><img src="assets/linkedin.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -219,7 +219,7 @@ plataformas apresentadas. <br>
                     <br>
                     <br>
                     <a href="https://goo.gl/maps/L6dartdB13MJQ5ii6" target="_blank">Abrir mapa
-                        <img src="../assets/link-externo.svg" alt="">
+                        <img src="assets/link-externo.svg" alt="">
                     </a>
                 </p>
             </div>
@@ -229,10 +229,10 @@ plataformas apresentadas. <br>
         </div>
         </footer>
         <section>
-        <div class="copyright" style="margin-top: 40px;">
-            <p>© 2023 LouerTech. Todos os direitos estão reservados. Desenvolvido por RenTech.</p>
-        </div>
-    </section>
+            <div class="copyright" >
+                <p>© 2023 LouerTech. Todos os direitos estão reservados. Desenvolvido por RenTech.</p>
+            </div>
+        </section>
 </body>
 <script>
     function Scrollativo() {
